rob/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: rob
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
      name: http
