rob/deny-load-test.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-to-nginx
  namespace: rob
spec:
  podSelector:
    matchLabels:
      app: nginx
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector: { }
          podSelector:
            matchLabels:
              allow-ingress-to: nginx
      ports:
        - port: 80
          protocol: TCP
